# ESPWiFi

./: .gitignore  .gitmodules  CMakeLists.txt  VIDEO_RECORDING.md  WEBSOCKET_REFACTORING.md  esp32_secure_boot.pem  idf_component.yml  library.json  library.properties  messages  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-c3.defaults  sdkconfig.esp32-s3.defaults  sdkconfig.esp32.defaults  sdkconfig.esp32c3.defaults  sdkconfig.secureboot  secure_boot_post.py  secure_boot_pre.py  set_sdkconfig.py
.github/: OTA_README.md  README.md  TOUCH_DISPLAY_README.md
cloud/: Dockerfile  main.go
cloudTunnel/: Dockerfile  go.mod  main.go
components/: MDNS_README.md
components/ESP32-A2DP/: CMakeLists.txt
components/ESP32-A2DP/src/: BluetoothA2DPCommon.h  BluetoothA2DPSource.cpp
config/: sdkconfig.secureboot
configs/: sdkconfig.c3.defaults  sdkconfig.defaults
dashboard/: .dockerignore  .env  .env.local  .env.local.save  CONFIGURATION.md  Dockerfile  Dockerfile.prebuilt  README.md  REFACTORING_SUMMARY.md  nginx.conf  package-lock.json  package.json
data/: config.json  index.html
espwifi.io/: Chart.yaml  values.yaml
examples/: Untitled  config.json  config.min.json
include/: Camera.h  CameraPins.h  Cloud.h  CloudCtl.h  CloudMedia.h  CloudTunnel.h  DFRobot_BMI160.h  ESPWiFi.h  GattServiceDef.h  IntervalTimer.h  LEDMatrix.h  SDCardPins.h  SpectralAnalyzer.h  TFTPins.h  Touch.h  TouchDisplay.h  TouchDisplayConfig.h  WebSocket.h  WebSocketClient.h
partitions/: esp32-c3.csv  esp32-s3-camera.csv  esp8266.csv  espwifi-camera.csv  espwifi_2MB.csv  (+2 more)
(+309 files in other folders)
